<resources>
    <string name="app_name">金色百年</string>

    <string name="open">开</string>
    <string name="close">关</string>


    <!-- 价格 -->
    <string-array name="filterPrice">
        <item>全部</item>
        <item>2000元以下</item>
        <item>2000-3000元</item>
        <item>3000-4000元</item>
        <item>4000元以上</item>
    </string-array>

    <!-- 桌数 -->
    <string-array name="filterTable">
        <item>全部</item>
        <item>10桌以下</item>
        <item>10-20桌</item>
        <item>20-30桌</item>
        <item>30桌以上</item>
    </string-array>

    <!-- 婚纱摄影 -->
    <string name="simple_style_ou">欧式</string>
    <string name="simple_style_han">韩式</string>
    <string name="simple_style_chn">中国风</string>
    <string name="simple_style_entity">纪实</string>
    <string name="simple_style_garden">田园</string>
    <string name="simple_style_laser">激光棚拍</string>


    <!-- end 婚纱摄影 -->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_surface_play">SurfacePlayActivity</string>

    <string name="nothing"></string>

    <!--MTDialog-->
    <string name="dialog_title">Dialog setup:</string>
    <string name="footer">Footer</string>
    <string name="header">Header</string>
    <string name="header_title">Your title</string>
    <string name="header_sample">SAMPLE HEADER</string>
    <string name="footer_button_close">取消</string>
    <string name="footer_button_confirm">关闭</string>
    <string name="footer_sample">SAMPLE FOOTER</string>
    <string name="button_bottom">Bottom</string>
    <string name="button_center">Center</string>
    <string name="button_top">Top</string>
    <string name="google_plus_title">Google Plus</string>
    <string name="google_maps_title">Maps</string>
    <string name="google_messenger_title">Messenger</string>
    <string name="question">Do you like Dialog Plus?</string>
    <string name="button_like">I like it</string>
    <string name="button_love">I love it</string>
    <string name="view_holder">View Holder</string>
    <string name="list_holder">List Holder</string>
    <string name="grid_holder">Grid Holder</string>
    <string name="show_header">Show header</string>
    <string name="show_footer">Show footer</string>

    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_content">ListContentActivity</string>
    <string name="title_activity_reside">ResideActivity</string>
    <string name="title_activity_other">OtherActivity</string>


    <!-- Master Refresh ListView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">最后更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_simple">SimpleActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_scroll">ScrollActivity</string>
    <string name="title_activity_scroll_detail">ScrollDetailActivity</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="title_activity_simple_list_acitvity">SimpleListAcitvity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_recycle">RecycleActivity</string>
    <string name="title_activity_photography">PhotographyActivity</string>
    <string name="title_activity_test_material_nav_drawer">TestMaterialNavDrawerActivity</string>
    <string name="title_activity_drawer_layout">DrawerLayoutActivity</string>
    <string name="title_activity_ttest">TTestActivity</string>
    <string name="title_activity_simple_detail">SimpleDetailActivity</string>
    <string name="title_activity_suit_detail">SuitDetailActivityActivity</string>
    <string name="title_name_list">Items</string>
    <string name="title_name_detail">Item Detail</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_activity_wedding_dress">WeddingDressActivity</string>
    <string name="title_activity_stylist_detail">StylistDetailActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_wedding_photography">WeddingPhotographyActivity</string>
    <string name="title_activity_suit_detail_parent">SuitDetailParentActivity</string>
    <string name="title_activity_upgrede">UpgredeActivity</string>
    <string name="title_activity_personal_center">PersonalCenterActivity</string>
    <string name="title_activity_crash">CrashActivity</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="title_activity_hotels">HotelsActivity</string>
    <string name="title_activity_test_coordinator">TestCoordinatorActivity</string>
    <string name="title_activity_hotel_detail">HotelDetailActivity</string>
    <string name="title_activity_banquet_detail">BanquetDetailActivity</string>
    <string name="title_activity_combo">ComboActivity</string>
    <string name="title_activity_plan">PlanActivity</string>
    <string name="title_activity_plan_detail">PlanDetailActivity</string>
    <string name="title_activity_majordomo_detail">MajordomoDetailActivity</string>
    <string name="title_activity_works_detail">WorksDetailActivity</string>
    <string name="title_activity_big_picture">BigPictureActivity</string>
    <string name="title_activity_f4">F4Activity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_planner_detail">PlannerDetailActivity</string>
    <string name="title_activity_temp_coordinate_layout">TempCoordinateLayoutActivity</string>
    <string name="title_activity_microfilm">MicrofilmActivity</string>
    <string name="title_activity_diamond">DiamondActivity</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="title_activity_dresses">DressesActivity</string>
    <string name="title_activity_supplies">SuppliesActivity</string>
    <string name="title_activity_hotel">HotelActivity</string>


    <!-- xRecyclerView -->
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_header_hint_loading">正在加载...</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="listview_footer_hint_normal">查看更多</string>
    <string name="title_activity_dress_list">DressListActivity</string>
    <string name="title_activity_other_detail">OtherDetailActivity</string>
    <string name="title_activity_mplan_detail">MPlanDetailActivity</string>
    <string name="title_activity_car_detail">CarDetailActivity</string>
</resources>
